# bare-metal-manager-core

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
book/src/: SUMMARY.md  desired_firmware.md
book/src/design/: spiffe-svid-sdd.md
book/src/design/machine-identity/: spiffe-svid-sdd.md
crates/admin-cli/src/instance/: args.rs  cmds.rs  mod.rs
crates/api/: Cargo.toml
crates/api-db/: Cargo.toml
crates/api-db/migrations/: 20260225120000_tenant_identity_config.sql
crates/api-db/src/: lib.rs  machine.rs  resource_pool.rs  tenant_identity_config.rs
crates/api-integration-tests/tests/: lib.rs
crates/api-model/: Cargo.toml
crates/api-model/src/resource_pool/: define.rs  mod.rs
crates/api-test-helper/src/: api_server.rs
crates/api/src/: api.rs  lib.rs  nvlink.rs  redfish.rs  run.rs  setup.rs
crates/bmc-mock/src/: lib.rs  machine_info.rs  main.rs
crates/dsx-exchange-consumer/: Cargo.toml  README.md  build.rs
crates/dsx-exchange-consumer/example/: config.example.toml
crates/dsx-exchange-consumer/src/: api_client.rs  config.rs  health_updater.rs  lib.rs  main.rs  messages.rs  metrics.rs  mqtt_consumer.rs
crates/health-report/src/: lib.rs
crates/machine-a-tron/src/: config.rs  host_machine.rs  machine_state_machine.rs
crates/network/src/: lib.rs
crates/rpc/proto/: forge.proto
crates/secrets/src/: credentials.rs
deploy/carbide-base/: kustomization.yaml
deploy/carbide-base/dsx-exchange-consumer/: certificate.yaml  deployment.yaml  kustomization.yaml  role.yaml  rolebinding.yaml  service-account.yaml  service.yaml
(+24 files in other folders)
