[package]
name = "carbide-dsx-exchange-consumer"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "carbide-dsx-exchange-consumer"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
chrono = { features = ["serde"], workspace = true }
figment = { workspace = true, features = ["toml", "env"] }
moka = { workspace = true }
humantime-serde = { workspace = true }
opentelemetry = { workspace = true }
serde = { features = ["derive"], workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { features = ["env-filter", "local-time"], workspace = true }
url = { workspace = true }

# [local-dependencies]
carbide-health-report = { path = "../health-report" }
carbide-rpc = { path = "../rpc" }
carbide-uuid = { path = "../uuid" }
carbide-tls = { path = "../tls" }
carbide-version = { path = "../version" }
logfmt = { path = "../logfmt" }
metrics-endpoint = { path = "../metrics-endpoint" }
mqttea = { path = "../mqttea" }

[build-dependencies]
carbide-version = { path = "../version" }

[lints]
workspace = true
